data/derived/sp14/progs/unify/prog0996.ml.out
Characters 75-77:
  | Sine i -> sin (pi * eval (i, x, y))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
